fixed button spacing

--- a/index.css
+++ b/index.css
@@ -56,7 +56,7 @@ button {
     font-family: 'Lexend Deca', 'sans-serif';
     font-size: 1rem;
     border-radius: 5rem;
-    margin: 7rem 0 0 4rem;
+    margin: 5rem 0 0 2.5rem;
     padding: 0.8rem 2rem; 
     background-color: var(--light-gray);
     border: solid var(--light-gray);
@@ -99,7 +99,6 @@ button {
         height: 28rem;
     }
     button{
-       margin-top: 0rem;
-        
+        margin-top: -2rem; 
     }
 }
